--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
     "joi": "^17.8.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.10.2",
@@ -25,7 +27,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "sanitize-html": "^2.10.0"
   },
   "devDependencies": {
     "eslint": "^8.36.0"
